# libzim

./: .cirrus.yml  .codecov.yml  .gitignore  .readthedocs.yaml  .travis.yml  AUTHORS  ChangeLog  Makefile.am  README  README.md  autogen.sh  configure.ac  configure.in  libzim.pc.in  meson.build  meson_options.txt  pip-selfcheck.json
debian/: changelog  control  libzim-dev.install  libzim8.install  rules
docs/: .gitignore  6to7.rst  conf.py  index.rst  meson.build  requirements.txt  usage.rst
examples/: Makefile.am  createZimExample.cpp  meson.build  pip-selfcheck.json
group/: bld.inf  zimlib.mmp
include/: Makefile.am  meson.build
include/zim/: archive.h  article.h  blob.h  buffer.h  bzip2stream.h  cache.h  cluster.h  compression_levels.h  deflatestream.h  dirent.h  endian.h  endian_tools.h  entry.h  error.h  file.h  file_compound.h  file_part.h  file_reader.h  fileheader.h  fileimpl.h  fileiterator.h  files.h  fstream.h  illustration.h  indexarticle.h  inflatestream.h  item.h  lzmastream.h  meson.build  qunicode.h  search.h  search_iterator.h  suggestion.h  suggestion_iterator.h  tools.h  uuid.h  version.h  zim.h
include/zim/writer/: article.h  articlesource.h  contentProvider.h  creator.h  item.h  url.h  zimcreator.h
scripts/: download_test_data.py  libzim-compile-resources  meson.build
src/: Makefile.am  _dirent.h  archive.cpp  arg.h  article.cpp  articlesearch.cpp  articlesource.cpp  blob.cpp  bufdatastream.h  buffer.cpp  buffer.h  buffer_reader.cpp  buffer_reader.h  bufferstreamer.h  bunzip2stream.cpp  bzip2stream.cpp  cache.h  cluster.cpp  cluster.h  compression.cpp  compression.h  concurrent_cache.h  config.h  config.h.in  constants.h  debug.h  decodeddatastream.h  decoderstreamreader.h  deflatestream.cpp  dirent.cpp  dirent.h  dirent_accessor.cpp  dirent_accessor.h  dirent_lookup.h  direntreader.h  endian_tools.h  entry.cpp  file.cpp  file_compound.cpp  file_compound.h  (+64 more)
src/tools/: Makefile.am  ZInt.cpp  log.properties  meson.build  zimBench.cpp  zimDump.cpp  zimSearch.cpp
src/writer/: _dirent.h  article.cpp  binaryfile.cpp  binaryfile.h  cluster.cpp  cluster.h  clusterWorker.cpp  clusterWorker.h  contentProvider.cpp  counterHandler.cpp  counterHandler.h  creator.cpp  creatordata.h  defaultIndexData.h  deflatestream.cpp  deflatestream.h  dirent.cpp  dirent.h  direntPool.h  handler.h  item.cpp  lzmastream.cpp  lzmastream.h  queue.h  tee.h  tinyString.h  titleListingHandler.cpp  titleListingHandler.h  workers.cpp  workers.h  xapianHandler.cpp  xapianHandler.h  xapianIndexer.cpp  xapianIndexer.h  xapianWorker.cpp  xapianWorker.h  zimcreator.cpp  zimcreatordata.h  zimcreatorimpl.cpp  zimcreatorimpl.h
src/xapian/: htmlparse.cc  htmlparse.h  myhtmlparse.cc  myhtmlparse.h
static/: meson.build  resources_list.txt
static/stopwords/: ar  bg  bn  br  ca  cs  da  de  el  eo  es  et  eu  fa  fi  ga  gl  ha  hi  hr  hu  hy  id  it  ja  ko  ku  la  lt  lv  mr  ms  nl  no  pl  pt  ro  ru  sk  sl  (+13 more)
subprojects/: liblzma.wrap  zstd.wrap
subprojects/gtest/googlemock/: meson.build
subprojects/gtest/googletest/: meson.build
symbian/: config.h
test/: Makefile.am  archive.cpp  bufferstreamer.cpp  bzip2stream.cpp  cluster.cpp  compression.cpp  concurrentcache.cpp  counterParsing.cpp  creator.cpp  decodeddatastream.cpp  decoderstreamreader.cpp  defaultIndexdata.cpp  dirent.cpp  dirent_lookup.cpp  error_in_creator.cpp  find.cpp  fuzzyRules.cpp  header.cpp  idatastream.cpp  illustrations.cpp  impl_find.cpp  indexing_criteria.cpp  istreamreader.cpp  iterator.cpp  log.cpp  lrucache.cpp  lzmastream.cpp  main.cpp  meson.build  parseLongPath.cpp  qunicode.cpp  random.cpp  rawstreamreader.cpp  reader.cpp  readerdatastreamwrapper.cpp  search.cpp  search_iterator.cpp  suggestion.cpp  suggestion_iterator.cpp  tempfile.cpp  (+10 more)
test/data/: .gitignore  create_test_zimfiles  inspectzim  invalid.invalid_checksumpos.zim  invalid.invalid_mimelistpos.zim  invalid.outofbounds_clusterptrpos.zim  invalid.outofbounds_first_clusterptr.zim  invalid.outofbounds_first_direntptr.zim  invalid.outofbounds_first_title_entry.zim  invalid.outofbounds_last_direntptr.zim  invalid.outofbounds_last_title_entry.zim  invalid.outofbounds_titleptrpos.zim  invalid.outofbounds_urlptrpos.zim  invalid.smaller_than_header.zim  meson.build  small.zim  wikibooks_be_all_nopic_2017-02.zim  wikibooks_be_all_nopic_2017-02_splitted.zimaa  wikibooks_be_all_nopic_2017-02_splitted.zimab
test/data/nons/: invalid.bad_mimetype_in_dirent.zim  invalid.bad_mimetype_list.zim  invalid.invalid_checksumpos.zim  invalid.invalid_mimelistpos.zim  invalid.nonsorted_dirent_table.zim  invalid.nonsorted_title_index.zim  invalid.outofbounds_clusterptrpos.zim  invalid.outofbounds_first_clusterptr.zim  invalid.outofbounds_first_direntptr.zim  invalid.outofbounds_first_title_entry.zim  invalid.outofbounds_last_direntptr.zim  invalid.outofbounds_last_title_entry.zim  invalid.outofbounds_titleptrpos.zim  invalid.outofbounds_urlptrpos.zim  invalid.smaller_than_header.zim  small.zim  small.zim.embedded  wikibooks_be_all_nopic_2017-02.zim  wikibooks_be_all_nopic_2017-02_splitted.zimaa  wikibooks_be_all_nopic_2017-02_splitted.zimab  wikibooks_be_all_nopic_2017-02_splitted.zimac
test/data/normal/: invalid.bad_mimetype_in_dirent.zim  invalid.invalid_mimelistpos.zim  invalid.nonsorted_title_index.zim  invalid.outofbounds_first_clusterptr.zim  invalid.outofbounds_first_direntptr.zim  invalid.smaller_than_header.zim  small.zim.embedded  wikibooks_be_all_nopic_2017-02_splitted.zimac
test/data/small_zimfile_data/: main.html
test/data/withns/: invalid.bad_mimetype_list.zim  invalid.nonsorted_dirent_table.zim  invalid.outofbounds_clusterptrpos.zim  invalid.outofbounds_last_title_entry.zim  invalid.outofbounds_titleptrpos.zim
test/pytest/: basic_open_test.py  meson.build
test/pytest/wrapper/: libzim_ext.pyx  meson.build  zim_wrapper.pxd
test/scripts/: create_test_zimfiles
travis/: compile.sh  install_deps.sh  travisci_builder_id_key.enc
zimDump/: Makefile.am  zimBench.cpp  zimDump.cpp  zimIntStream.cpp  zimQUnicode.cpp  zimSearch.cpp
(+8 files in other folders)
