nobase_include_HEADERS = \
	zim/article.h \
	zim/articlesearch.h \
	zim/blob.h \
	zim/bunzip2stream.h \
	zim/bzip2.h \
	zim/bzip2stream.h \
	zim/cache.h \
	zim/cluster.h \
	zim/deflatestream.h \
	zim/dirent.h \
	zim/endian.h \
	zim/error.h \
	zim/file.h \
	zim/fileheader.h \
	zim/fileimpl.h \
	zim/fileiterator.h \
	zim/files.h \
	zim/indexarticle.h \
	zim/inflatestream.h \
	zim/qunicode.h \
	zim/search.h \
	zim/stringlessignorecase.h \
	zim/unicode.h \
	zim/uuid.h \
	zim/zim.h \
	zim/zintstream.h
