nobase_include_HEADERS = \
	zim/article.h \
	zim/articlesearch.h \
	zim/blob.h \
	zim/cache.h \
	zim/cluster.h \
	zim/dirent.h \
	zim/endian.h \
	zim/error.h \
	zim/file.h \
	zim/fileheader.h \
	zim/fileimpl.h \
	zim/fileiterator.h \
	zim/fstream.h \
	zim/indexarticle.h \
	zim/noncopyable.h \
	zim/search.h \
	zim/smartptr.h \
	zim/refcounted.h \
	zim/template.h \
	zim/unicode.h \
	zim/uuid.h \
	zim/zim.h \
	zim/zintstream.h

noinst_HEADERS = \
	zim/bunzip2stream.h \
	zim/bzip2.h \
	zim/bzip2stream.h \
	zim/deflatestream.h \
	zim/inflatestream.h \
	zim/lzmastream.h \
	zim/unlzmastream.h
