include_directory = include_directories('.')

install_headers(
    'zim/article.h',
    'zim/blob.h',
    'zim/error.h',
    'zim/file.h',
    'zim/fileheader.h',
    'zim/fileiterator.h',
    'zim/search.h',
    'zim/search_iterator.h',
    'zim/uuid.h',
    'zim/zim.h',
    subdir:'zim'
)

install_headers(
    'zim/writer/article.h',
    'zim/writer/url.h',
    'zim/writer/creator.h',
    subdir:'zim/writer'
)

