include_directory = include_directories('.')

install_headers(
    'zim/archive.h',
    'zim/blob.h',
    'zim/error.h',
    'zim/item.h',
    'zim/entry.h',
    'zim/fileheader.h',
    'zim/search.h',
    'zim/search_iterator.h',
    'zim/uuid.h',
    'zim/zim.h',
    subdir:'zim'
)

install_headers(
    'zim/writer/article.h',
    'zim/writer/url.h',
    'zim/writer/creator.h',
    subdir:'zim/writer'
)

