data_files = [
  'wikibooks_be_all_nopic_2017-02.zim',
  'wikibooks_be_all_nopic_2017-02_splitted.zimaa',
  'wikibooks_be_all_nopic_2017-02_splitted.zimab',
  'wikibooks_be_all_nopic_2017-02_splitted.zimac',
  'wikipedia_en_climate_change_nopic_2020-01.zim'
]

foreach file : data_files
  configure_file(input : file, output : file, copy: true)
endforeach
